--- a/location.html
+++ b/location.html
@@ -10,14 +10,16 @@
 
 <body>
     <form id="form">
+        <span id="closeBtn" class="close">&times;</span>
         <h1>SELECT YOUR LOCATION</h1>
         <h3>To Check Products & Delivery Options available at your location</h3>
         <input type="text" />
-        <input type="text" placeholder="⌖ Get Current Location"/><br><br>
+        <input type="text" placeholder="⌖ Get Current Location" /><br><br>
         <span>OR</span>
-        <input id="submit" type="submit" value="select address"/>
-        <input id="submit" type="submit" value="Continue"/>
+        <input id="submit" type="submit" value="Signin to select address" />
+        <input id="submit" type="submit" value="Continue" />
     </form>
 </body>
+<script src="./scripts/location.js"></script>
 
 </html>
