--- a/televisons.html
+++ b/televisons.html
@@ -4,22 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Work</title>
+    <title>Televisions Accessories</title>
     <link rel="stylesheet" href="./styles/navbar.css">
     <link rel="stylesheet" href="./styles/footer.css">
-
 </head>
 
 <body>
-    <div id="main-container">
+    <div id="cont">
         <div id="nav-container">
             <div id="nav">
-                <a href="index.html">
-                    <div id="logo">
-                        <img src="https://i.im.ge/2024/12/31/zZyeEq.Croma-logo.png" alt="logo">
-                    </div>
-                </a>
+                <div id="logo">
+                    <img src="https://i.im.ge/2024/12/31/zZyeEq.Croma-logo.png" alt="logo">
+                </div>
                 <div id="nav-links">
+                    <!------------------ Navbar-------------->
                     <div id="mySidenav" class="sidenav">
                         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                         <a href="televisons.html">Televisions & Accessoris</a>
@@ -31,7 +29,6 @@
                         <a href="#">Health & Fitness</a>
                         <a href="#">Gaming</a>
                         <a href="#">Smart Devices</a>
-                        <a href="">Top Brands</a>
                     </div>
                     <span style="cursor:pointer" onclick="openNav()">&#9776; Menu</span>
                     <input type="search" placeholder=" What are you looking for ?" />
@@ -43,8 +40,12 @@
                 </div>
             </div>
         </div>
-        <div id="footer"></div>
+        <!-----------------------------  ------------------------------   ------------------------->
+        <div id="card-div">
+            <div class="card"></div>
+        </div>
     </div>
+    <div id="footer"></div>
 </body>
 <script src="./scripts/navbar.js"></script>
 <script src="./scripts/footer.js"></script>
