--- a/cart.html
+++ b/cart.html
@@ -4,22 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Work</title>
+    <title>Your Cart</title>
     <link rel="stylesheet" href="./styles/navbar.css">
     <link rel="stylesheet" href="./styles/footer.css">
-
 </head>
 
 <body>
-    <div id="main-container">
+    <div id="cont">
         <div id="nav-container">
             <div id="nav">
-                <a href="index.html">
-                    <div id="logo">
-                        <img src="https://i.im.ge/2024/12/31/zZyeEq.Croma-logo.png" alt="logo">
-                    </div>
-                </a>
+                <div id="logo">
+                    <img src="https://i.im.ge/2024/12/31/zZyeEq.Croma-logo.png" alt="logo">
+                </div>
                 <div id="nav-links">
+                    <!------------------ Navbar-------------->
                     <div id="mySidenav" class="sidenav">
                         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                         <a href="televisons.html">Televisions & Accessoris</a>
@@ -31,8 +29,7 @@
                         <a href="#">Health & Fitness</a>
                         <a href="#">Gaming</a>
                         <a href="#">Smart Devices</a>
-                        <a href="">Top Brands</a>
-                    </div>
+                </div>
                     <span style="cursor:pointer" onclick="openNav()">&#9776; Menu</span>
                     <input type="search" placeholder=" What are you looking for ?" />
                     <a href="location.html"><img
@@ -40,11 +37,12 @@
                             alt="location"> Fatehpur 212601</a>
                     <a href="profile.html">Profile</a>
                     <a href="cart.html">Cart</a>
+
                 </div>
             </div>
         </div>
+        <!-----------------------------  ------------------------------   ------------------------->
         <div id="footer"></div>
-    </div>
 </body>
 <script src="./scripts/navbar.js"></script>
 <script src="./scripts/footer.js"></script>
