--- a/cart.html
+++ b/cart.html
@@ -17,20 +17,9 @@
                     <img src="https://i.im.ge/2024/12/31/zZyeEq.Croma-logo.png" alt="logo">
                 </div>
                 <div id="nav-links">
-                    <!------------------ Navbar-------------->
-                    <div id="mySidenav" class="sidenav">
-                        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-                        <a href="televisons.html">Televisions & Accessoris</a>
-                        <a href="#">Home Appliances</a>
-                        <a href="#">Phones & Wearable</a>
-                        <a href="#">Computers & Tablets</a>
-                        <a href="#">Kitchen Appliances</a>
-                        <a href="#">Audio & Video</a>
-                        <a href="#">Health & Fitness</a>
-                        <a href="#">Gaming</a>
-                        <a href="#">Smart Devices</a>
-                </div>
-                    <span style="cursor:pointer" onclick="openNav()">&#9776; Menu</span>
+                    <!------------------  Navbar  --------------->
+                    <div id="menu-div">
+                    </div>
                     <input type="search" placeholder=" What are you looking for ?" />
                     <a href="location.html"><img
                             src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRoQP-bbmJYNnewidzIgck-I4TtU7_V4SV4JA&s"
@@ -42,7 +31,7 @@
             </div>
         </div>
         <!-----------------------------  ------------------------------   ------------------------->
-        <div id="footer"></div>
+    <div id="footer"></div>
 </body>
 <script src="./scripts/navbar.js"></script>
 <script src="./scripts/footer.js"></script>
