--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Project Work</title>
     <link rel="stylesheet" href="./styles/navbar.css">
     <link rel="stylesheet" href="./styles/footer.css">
+    <link rel="stylesheet" href="./styles/index.css">
 
 </head>
 
@@ -20,20 +21,8 @@
                     </div>
                 </a>
                 <div id="nav-links">
-                    <div id="mySidenav" class="sidenav">
-                        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-                        <a href="televisons.html">Televisions & Accessoris</a>
-                        <a href="#">Home Appliances</a>
-                        <a href="#">Phones & Wearable</a>
-                        <a href="#">Computers & Tablets</a>
-                        <a href="#">Kitchen Appliances</a>
-                        <a href="#">Audio & Video</a>
-                        <a href="#">Health & Fitness</a>
-                        <a href="#">Gaming</a>
-                        <a href="#">Smart Devices</a>
-                        <a href="">Top Brands</a>
+                    <div id="menu-div">
                     </div>
-                    <span style="cursor:pointer" onclick="openNav()">&#9776; Menu</span>
                     <input type="search" placeholder=" What are you looking for ?" />
                     <a href="location.html"><img
                             src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRoQP-bbmJYNnewidzIgck-I4TtU7_V4SV4JA&s"
@@ -43,10 +32,23 @@
                 </div>
             </div>
         </div>
-        <div id="footer"></div>
+        <div id="cont-img">
+            <div class="slide"><img src="./images/img-1.webp" alt="img-1"></div>
+            <div class="slide"><img src="./images/img-2.webp" alt="img-2"></div>
+            <div class="slide"><img src="./images/img3.webp" alt="img-3"></div>
+            <div class="slide"><img src="./images/img-4.webp" alt="img-4"></div>
+            <div class="slide"><img src="./images/img-5.webp" alt="img-5"></div>
+            <div class="slide"><img src="./images/img-6.webp" alt="img-6"></div>
+
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)"> &#10095;</a>
+        </div>
+
     </div>
+    <div id="footer"></div>
 </body>
 <script src="./scripts/navbar.js"></script>
 <script src="./scripts/footer.js"></script>
+<script src="./scripts/index.js"></script>
 
 </html>
