--- a/televisons.html
+++ b/televisons.html
@@ -7,6 +7,7 @@
     <title>Televisions Accessories</title>
     <link rel="stylesheet" href="./styles/navbar.css">
     <link rel="stylesheet" href="./styles/footer.css">
+    <link rel="stylesheet" href="./styles/television.css">
 </head>
 
 <body>
@@ -18,19 +19,8 @@
                 </div>
                 <div id="nav-links">
                     <!------------------ Navbar-------------->
-                    <div id="mySidenav" class="sidenav">
-                        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-                        <a href="televisons.html">Televisions & Accessoris</a>
-                        <a href="#">Home Appliances</a>
-                        <a href="#">Phones & Wearable</a>
-                        <a href="#">Computers & Tablets</a>
-                        <a href="#">Kitchen Appliances</a>
-                        <a href="#">Audio & Video</a>
-                        <a href="#">Health & Fitness</a>
-                        <a href="#">Gaming</a>
-                        <a href="#">Smart Devices</a>
+                    <div id="menu-div">
                     </div>
-                    <span style="cursor:pointer" onclick="openNav()">&#9776; Menu</span>
                     <input type="search" placeholder=" What are you looking for ?" />
                     <a href="location.html"><img
                             src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRoQP-bbmJYNnewidzIgck-I4TtU7_V4SV4JA&s"
@@ -41,9 +31,121 @@
             </div>
         </div>
         <!-----------------------------  ------------------------------   ------------------------->
+        <div id="filters">
+            <h4>Televisions Accessories</h4>
+            <h2>Televisions & Accessories <span>(554)</span></h2>
+        </div>
         <div id="card-div">
+            <div class="card">
+                <div id="pruductImg">
+                    <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1730266142/Croma%20Assets/Entertainment/Television/Images/307847_0_w8csrp.png?tr=w-360"
+                        alt="img1" />
+                </div>
+                <h3>Croma 109 cm (43 inch) 4K Ultra HD LED Google TV with Dolby Audio (2024 model)</h3>
+                <h4>4.6
+                    <a href="#">(34 Ratings & 17 Reviews)</a>
+                </h4>
+                <h3>₹21,999
+                    <span>₹38,900</span>
+                    (Save ₹16,901)
+                    43% Off
+                </h3>
+                <p>Standard Delivery by Tomorrow</p>
+                <div id="btns">
+                    <button>Extra 2000 Bank Discount</button>
+                    <button>No Cost EMI</button>
+                </div>
+            </div>
+            <div class="card">
+                <div id="pruductImg">
+                    <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1729510432/Croma%20Assets/Entertainment/Television/Images/307850_0_qcd94a.png?tr=w-400"
+                        alt="img2" />
+                </div>
+                <h3>Croma 80 cm (32 inch) HD Ready Google TV with Dolby Audio (2024 Model)</h3>
+                <h4>3.7
+                    <a href="#">(34 Ratings & 17 Reviews)</a>
+                </h4>
+                <h3>₹10,990
+                    <span>₹25,000</span>
+                    (Save ₹14,010)
+                    56% Off
+                </h3>
+                <p>Standard Delivery by Tomorrow</p>
+                <div id="btns">
+                    <button>Extra 2000 Bank Discount</button>
+                    <button>No Cost EMI</button>
+                </div>
+            </div>
+            <div class="card">
+                <div id="pruductImg">
+                    <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1730266189/Croma%20Assets/Entertainment/Television/Images/307848_0_njvolr.png?tr=w-400"
+                        alt="img2" />
+                </div>
+                <h3>Croma 80 cm (32 inch) HD Ready Google TV with Dolby Audio (2024 Model)</h3>
+                <h4>3.6
+                    <a href="#">(34 Ratings & 17 Reviews)</a>
+                </h4>
+                <h3>₹31,990
+                    <span>₹76,500</span>
+                    (Save ₹44,510)
+                    58% Off
+                </h3>
+                <p>Standard Delivery by Tomorrow</p>
+                <div id="btns">
+                    <button>Extra 2000 Bank Discount</button>
+                    <button>No Cost EMI</button>
+                </div>
+            </div>
+            <div class="card">
+                <div id="pruductImg">
+                    <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1729510439/Croma%20Assets/Entertainment/Television/Images/301734_0_vu5bzj.png?tr=w-400" alt="img2" />
+                </div>
+                <h3>Croma 80 cm (32 inch) HD Ready LED TV with Bezel Less Display</h3>
+                <h4>3.9
+                    <a href="#">(34 Ratings & 17 Reviews)</a>
+                </h4>
+                <h3>₹7,590
+                    <span>₹9,500
+                    </span>
+                    (Save ₹1,910)
+                    20% Off
+                </h3>
+                <p>Standard Delivery by Tomorrow</p>
+                <div id="btns">
+                    <button>No Cost EMI</button>
+                </div>
+            </div>
+            <div class="card">
+                <div id="pruductImg">
+                    <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1729510439/Croma%20Assets/Entertainment/Television/Images/301734_0_vu5bzj.png?tr=w-400" alt="img2" />
+                </div>
+                <h3>Croma 80 cm (32 inch) HD Ready LED TV with Bezel Less Display</h3>
+                <h4>3.9
+                    <a href="#">(34 Ratings & 17 Reviews)</a>
+                </h4>
+                <h3>₹7,590
+                    <span>₹9,500
+                    </span>
+                    (Save ₹1,910)
+                    20% Off
+                </h3>
+                <p>Standard Delivery by Tomorrow</p>
+                <div id="btns">
+                    <button>No Cost EMI</button>
+                </div>
+            </div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
             <div class="card"></div>
         </div>
+
     </div>
     <div id="footer"></div>
 </body>
