--- a/profile.html
+++ b/profile.html
@@ -7,6 +7,7 @@
     <title>My Account</title>
     <link rel="stylesheet" href="./styles/navbar.css">
     <link rel="stylesheet" href="./styles/footer.css">
+    <link rel="stylesheet" href="./styles/signup.css">
 </head>
 
 <body>
@@ -30,10 +31,38 @@
             </div>
         </div>
         <!---------------------------------------------------------------------------------->
+        <div id="profile">
+            <div id="signupPage">
+                <form id="form">
+                    <h3>Please Signup.....</h3>
+                    <input id="username" type="text" placeholder="Enter Name">
+                    <input id="email" type="email" placeholder="Enter Email">
+                    <input id="password" type="password" placeholder="Enter Password">
+                    <input id="mobile" type="number" placeholder="Enter Mobile Number">
+                    <select id="gender" name="" id="">
+                        <option value="">Select Gender</option>
+                        <option value="male">Male</option>
+                        <option value="female">Female</option>
+                        <option value="others">Others</option>
+                    </select>
+                    <input id="submit" type="submit" value="signup">
+                </form>
+            </div>
+            <div id="loginpage">
+                <form id="form" action="">
+                    <h3>Please Login.....</h3>
+                    <input id="email" type="email" placeholder="Enter Email">
+                    <input id="password" type="password" placeholder="Enter Password">
+                    <input id="submit" type="submit" value="Login">
+                </form>
+            </div>
+        </div>
     </div>
     <div id="footer"></div>
 </body>
+<script src="./scripts/baseUrl.js" type="module"></script>
 <script src="./scripts/navbar.js"></script>
 <script src="./scripts/footer.js"></script>
+<script src="./scripts/signup.js" type="module"></script>
 
 </html>
