--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                     <input type="search" placeholder=" What are you looking for ?" />
                     <a href="location.html"><img
                             src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRoQP-bbmJYNnewidzIgck-I4TtU7_V4SV4JA&s"
-                            alt="location"> Fatehpur 212601</a>
-                    <a href="profile.html">Profile</a>
+                            alt="location"> Mumbai,400049</a>
+                    <a href="profile.html">SignUp-login</a>
                     <a href="cart.html">Cart</a>
                 </div>
             </div>
@@ -43,9 +43,39 @@
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
             <a class="next" onclick="plusSlides(1)"> &#10095;</a>
         </div>
+    </div>
+    <div id="banks-offers">
+        <h2>Exciting Bank Offers For You</h2>
+        <div class="banks">
+            <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1721197736/Croma%20Assets/CMS/Homepage%20Banners/neu_offers_desk_tkq4lf.png?tr=w-720" alt="bankimg">
+            <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1717075769/Croma%20Assets/CMS/LP%20Page%20Banners/2024/BAU/HP_2Split_MFYMP_Brands_HDFC_ICIC_30May2024_kzbaou.png?tr=w-720" alt="bankimg">
+        </div>
+        <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1728297129/Croma%20Assets/CMS/LP%20Page%20Banners/2024/More%20For%20Your%20Money/October/BAU/Sat-Sun%20-%20Federal%20HDFC%20HSBC/LP_SingleSplit_Bank_Fed-hdfc-hsbc_7oct2024_h51k5x.png?tr=w-1024" alt="img3">
+    </div>
+    <h2>Our New Favourites</h2>
+    <div id="new">
+        <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1734690428/Croma%20Assets/CMS/LP%20Page%20Banners/2024/Our%20new%20Favourite/DEC/20122024/HP_2Split_SOH_PartySpeakers_20Dec2024_yeoqlc.png?tr=w-720" alt="img1">
+        <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1734690428/Croma%20Assets/CMS/LP%20Page%20Banners/2024/Our%20new%20Favourite/DEC/20122024/HP_2Split_SOH_PartySpeakers_20Dec2024_yeoqlc.png?tr=w-720" alt="img2">
+        <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1734693517/Croma%20Assets/CMS/LP%20Page%20Banners/2024/Our%20new%20Favourite/DEC/20122024/HP_2Split_SOH_JBL_SB_20Dec2024_vko52y.png?tr=w-720" alt="img3">
+        <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1734693517/Croma%20Assets/CMS/LP%20Page%20Banners/2024/Our%20new%20Favourite/DEC/20122024/HP_2Split_SOH_JBL_LiveBeam3_20Dec2024_xjmcer.png?tr=w-720" alt="img4">
+    </div>
+    <div id="products">
+        <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1697623928/Croma%20Assets/Computers%20Peripherals/Cables%20and%20Connectors/Images/235253_z9bxnx.png?tr=w-400" alt="img1">
+        <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1725624613/263298_0_iznsam.png?tr=w-400" alt="img2">
+        <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1725624613/263298_0_iznsam.png?tr=w-400" alt="img">
+        <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1728543818/224660_0_gnehey.png?tr=w-400" alt="img4">
+        <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1730808519/Croma%20Assets/Small%20Appliances/Hair%20Care/Images/258877_0_cad7nr.png?tr=w-480" alt="img5">
+        <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1706191322/Croma%20Assets/Small%20Appliances/Hair%20Care/Images/259969_0_qfk9y1.png?tr=w-400" alt="img6">
+        <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1728033063/Croma%20Assets/Entertainment/Speakers%20and%20Media%20Players/Images/251612_0_dcsbbk.png?tr=w-400" alt="img7">
+        <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1728033068/Croma%20Assets/Entertainment/Speakers%20and%20Media%20Players/Images/251614_0_ghxuff.png?tr=w-400" alt="img8">
+        <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1670998205/Croma%20Assets/Entertainment/Headphones%20and%20Earphones/Images/255883_qc5uut.png?tr=w-400" alt="img9">
+        <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1729661924/Croma%20Assets/Small%20Appliances/Food%20Processors/Images/310652_0_kee33b.png?tr=w-400" alt="img10">
+        <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1691679975/Croma%20Assets/Small%20Appliances/Kettles/Images/204174_0_rhvo3s.png?tr=w-400" alt="img11">
+        <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1718792099/Croma%20Assets/Small%20Appliances/Food%20Processors/Images/301714_0_ec5tqy.png?tr=w-400" alt="img12">
 
     </div>
-    <div id="footer"></div>
+    
+    <div id="footer" style="margin-top: 100%;"></div>
 </body>
 <script src="./scripts/navbar.js"></script>
 <script src="./scripts/footer.js"></script>
