--- a/profile.html
+++ b/profile.html
@@ -24,9 +24,8 @@
                     <input type="search" placeholder=" What are you looking for ?" />
                     <a href="location.html"><img
                             src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRoQP-bbmJYNnewidzIgck-I4TtU7_V4SV4JA&s"
-                            alt="location"> Fatehpur 212601</a>
-                    <a href="profile.html">Profile</a>
-                    <a href="cart.html">Cart</a>
+                            alt="location"> Mumbai,400049 </a>
+                            <a href="cart.html">Cart</a>
                 </div>
             </div>
         </div>
