--- a/profile.html
+++ b/profile.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -25,7 +24,7 @@
                     <a href="location.html"><img
                             src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRoQP-bbmJYNnewidzIgck-I4TtU7_V4SV4JA&s"
                             alt="location"> Mumbai,400049 </a>
-                            <a href="cart.html">Cart</a>
+                    <a href="cart.html">Cart</a>
                 </div>
             </div>
         </div>
@@ -63,5 +62,6 @@
 <script src="./scripts/navbar.js"></script>
 <script src="./scripts/footer.js"></script>
 <script src="./scripts/signup.js" type="module"></script>
+<script src="./scripts/login.js" type="module"></script>
 
 </html>
