--- a/televisions.html
+++ b/televisions.html
@@ -34,29 +34,29 @@
         <div id="filters">
             <h4>Televisions Accessories</h4>
             <h2>Televisions & Accessories <span>(554)</span></h2>
-                <label for="category">Category:</label>
-                <select id="category">
-                  <option value="all">All</option>
-                  <option value="HD TVs">4K Ultra HD TVs (303)</option>
-                  <option value="Smart tvs">Smart TVs (229)</option>
-                  <option value="medium">Medium Screen TVs (112)s</option>
-                </select>
-                <label for="sort">Sort By:</label>
-                <select id="sort">
-                    <option value="all">All</option>
-                  <option value="High">80,001 - 50,000 (39)</option>
-                  <option value="mediumc">50,001 - 60,000 (36)</option>
-                  <option value="medium">20,001 - 30,000 (72)</option>
-                  <option value="low">3,001 - 5,000 (10)</option>
-                </select>
-                <label for="sort">Discount:</label>
-                <select id="sort" >
-                    <option value="all">All</option>
-                  <option value="High">40% To 60% (195) </option>
-                  <option value="Medium">60% To 80% (51)</option>
-                  <option value="Low">20% To 40% (206)</option>
-                  <option value="Min">Below 20% (52)</option>
-                </select>
+            <label for="category">Category:</label>
+            <select id="category">
+                <option value="all">All</option>
+                <option value="HD TVs">4K Ultra HD TVs (303)</option>
+                <option value="Smart tvs">Smart TVs (229)</option>
+                <option value="medium">Medium Screen TVs (112)s</option>
+            </select>
+            <label for="sort">Sort By:</label>
+            <select id="sort">
+                <option value="all">All</option>
+                <option value="High">80,001 - 50,000 (39)</option>
+                <option value="mediumc">50,001 - 60,000 (36)</option>
+                <option value="medium">20,001 - 30,000 (72)</option>
+                <option value="low">3,001 - 5,000 (10)</option>
+            </select>
+            <label for="sort">Discount:</label>
+            <select id="sort">
+                <option value="all">All</option>
+                <option value="High">40% To 60% (195) </option>
+                <option value="Medium">60% To 80% (51)</option>
+                <option value="Low">20% To 40% (206)</option>
+                <option value="Min">Below 20% (52)</option>
+            </select>
         </div>
         <div id="card-div">
             <div class="card">
@@ -121,7 +121,8 @@
             </div>
             <div class="card">
                 <div id="pruductImg">
-                    <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1729510439/Croma%20Assets/Entertainment/Television/Images/301734_0_vu5bzj.png?tr=w-400" alt="img2" />
+                    <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1729510439/Croma%20Assets/Entertainment/Television/Images/301734_0_vu5bzj.png?tr=w-400"
+                        alt="img2" />
                 </div>
                 <h3>Croma 80 cm (32 inch) HD Ready LED TV with Bezel Less Display</h3>
                 <h4>3.9
@@ -140,7 +141,8 @@
             </div>
             <div class="card">
                 <div id="pruductImg">
-                    <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1729510459/Croma%20Assets/Entertainment/Television/Images/273733_0_w8e4qb.png?tr=w-400" alt="img5" />
+                    <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1729510459/Croma%20Assets/Entertainment/Television/Images/273733_0_w8e4qb.png?tr=w-400"
+                        alt="img5" />
                 </div>
                 <h3>Croma 109 cm (43 inch) Full HD LED Smart TV with Bezel Less Display</h3>
                 <h4>3.9
@@ -159,7 +161,8 @@
             </div>
             <div class="card">
                 <div id="pruductImg">
-                    <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1730199583/Croma%20Assets/Entertainment/Television/Images/307846_0_ywdwl1.png?tr=w-400" alt="img6" />
+                    <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1730199583/Croma%20Assets/Entertainment/Television/Images/307846_0_ywdwl1.png?tr=w-400"
+                        alt="img6" />
                 </div>
                 <h3>Croma 102 cm (40 inch) Full HD LED Smart Google TV with Dolby Audio (2024 model)</h3>
                 <h4>4
@@ -169,7 +172,7 @@
                     <span>₹₹29,900
                     </span>
                     (Save ₹12,901)
-                43% Off
+                    43% Off
                 </h3>
                 <p>Standard Delivery by Tomorrow</p>
                 <div id="btns">
@@ -179,7 +182,8 @@
             </div>
             <div class="card">
                 <div id="pruductImg">
-                    <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1697017501/Croma%20Assets/Entertainment/Media%20Streaming%20Devices/Images/256414_0_htpe0z.png?tr=w-400" alt="img7" />
+                    <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1697017501/Croma%20Assets/Entertainment/Media%20Streaming%20Devices/Images/256414_0_htpe0z.png?tr=w-400"
+                        alt="img7" />
                 </div>
                 <h3>amazon Fire TV Stick Lite with Alexa Voice Remote (Full HD Video Steaming,...)</h3>
                 <h4>4.6
@@ -195,7 +199,8 @@
             </div>
             <div class="card">
                 <div id="pruductImg">
-                    <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1724856314/Croma%20Assets/Entertainment/Television/Images/306506_0_rgroc7.png?tr=w-400" alt="img8" />
+                    <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1724856314/Croma%20Assets/Entertainment/Television/Images/306506_0_rgroc7.png?tr=w-400"
+                        alt="img8" />
                 </div>
                 <h3>TCL S Series 80 cm (32 inch) Full HD LED Smart Google TV with Dolby Audio (2024)</h3>
                 <h4>4.7
@@ -214,7 +219,8 @@
             </div>
             <div class="card">
                 <div id="pruductImg">
-                    <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1720763846/Croma%20Assets/Entertainment/Television/Images/308003_i3ctts.png?tr=w-400" alt="img2" />
+                    <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1720763846/Croma%20Assets/Entertainment/Television/Images/308003_i3ctts.png?tr=w-400"
+                        alt="img2" />
                 </div>
                 <h3>Xiaomi A Series 80 cm (32 inch) HD Ready LED Smart Google TV with Voice Assistant</h3>
                 <h4>3.9
@@ -234,7 +240,8 @@
             </div>
             <div class="card">
                 <div id="pruductImg">
-                    <img src=" https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1730266167/Croma%20Assets/Entertainment/Television/Images/307849_0_qf7z2b.png?tr=w-400" alt="img11" />
+                    <img src=" https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1730266167/Croma%20Assets/Entertainment/Television/Images/307849_0_qf7z2b.png?tr=w-400"
+                        alt="img11" />
                 </div>
                 <h3>Croma 127 cm (50 inch) 4K Ultra HD LED Google TV with Bezel Less Display</h3>
                 <h4>5(7)
@@ -254,7 +261,8 @@
             </div>
             <div class="card">
                 <div id="pruductImg">
-                    <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1724858461/Croma%20Assets/Entertainment/Television/Images/306525_0_uxe6hz.png?tr=w-400" alt="img12" />
+                    <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1724858461/Croma%20Assets/Entertainment/Television/Images/306525_0_uxe6hz.png?tr=w-400"
+                        alt="img12" />
                 </div>
                 <h3>TCL C Series 140 cm (55 inch) QLED 4K Ultra HD Google TV with Dolby Vision</h3>
                 <h4>3 (29)</h4>
@@ -270,9 +278,10 @@
                     <button>No Cost EMI</button>
                 </div>
             </div>
-           <div class="card">
+            <div class="card">
                 <div id="pruductImg">
-                    <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1653542086/Croma%20Assets/Small%20Appliances/Home%20Safety%20Security/Images/253104_zgrtwd.png?tr=w-400" alt="img2" />
+                    <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1653542086/Croma%20Assets/Small%20Appliances/Home%20Safety%20Security/Images/253104_zgrtwd.png?tr=w-400"
+                        alt="img2" />
                 </div>
                 <h3>zunpulse Universal Smart Remote Control For Television (Black)</h3>
                 <h3>₹1,599
@@ -289,7 +298,8 @@
             </div>
             <div class="card">
                 <div id="pruductImg">
-                    <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1725515394/Croma%20Assets/Entertainment/Television/Images/307481_e9hibd.png?tr=w-400" alt="img2" />
+                    <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1725515394/Croma%20Assets/Entertainment/Television/Images/307481_e9hibd.png?tr=w-400"
+                        alt="img2" />
                 </div>
                 <h3>TOSHIBA C350NP 108 cm (43 inch) 4K Ultra HD LED Google TV with Regza Engine</h3>
                 <h3>₹24,999
@@ -306,7 +316,8 @@
             </div>
             <div class="card">
                 <div id="pruductImg">
-                    <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1717987430/Croma%20Assets/Entertainment/Television/Images/307486_p223wm.png?tr=w-400" alt="img2" />
+                    <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1717987430/Croma%20Assets/Entertainment/Television/Images/307486_p223wm.png?tr=w-400"
+                        alt="img2" />
                 </div>
                 <h3>LG QNED90165 cm (65 inch) QNED MiniLED 4K Ultra HD WebOS TV</h3>
                 <h3>₹7,590
@@ -323,7 +334,8 @@
             </div>
             <div class="card">
                 <div id="pruductImg">
-                    <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1729510439/Croma%20Assets/Entertainment/Television/Images/301734_0_vu5bzj.png?tr=w-400" alt="img2" />
+                    <img src="https://media-ik.croma.com/prod/https://media.croma.com/image/upload/v1729510439/Croma%20Assets/Entertainment/Television/Images/301734_0_vu5bzj.png?tr=w-400"
+                        alt="img2" />
                 </div>
                 <h3>Croma 80 cm (32 inch) HD Ready LED TV with Bezel Less Display</h3>
                 <h4>3.9
@@ -344,7 +356,7 @@
         </div>
 
     </div>
-<div id="footer"></div>
+    <div id="footer"></div>
 </body>
 <script src="./scripts/navbar.js"></script>
 <script src="./scripts/footer.js"></script>
