--- a/location.html
+++ b/location.html
@@ -9,8 +9,16 @@
 </head>
 
 <body>
-    <form id="form" >
-         </form>
+    <form id="form">
+        <span id="closeBtn" class="close">&times;</span>
+        <h1>SELECT YOUR LOCATION</h1>
+        <h3>To Check Products & Delivery Options available at your location</h3>
+        <input type="text"  placeholder="Enter pin code"/>
+        <input type="text" placeholder="⌖ Get Current Location" /><br><br>
+        <span>OR</span>
+        <input id="submit" type="submit" value="Signin to select address" />
+        <input id="submit" type="submit" value="Continue" />
+    </form>
 </body>
 <script src="./scripts/location.js"></script>
 
