--- a/profile.html
+++ b/profile.html
@@ -44,14 +44,8 @@
                         <option value="others">Others</option>
                     </select>
                     <input id="submit" type="submit" value="signup">
-                </form>
-            </div>
-            <div id="loginpage">
-                <form id="form" action="">
-                    <h3>Please Login.....</h3>
-                    <input id="email" type="email" placeholder="Enter Email">
-                    <input id="password" type="password" placeholder="Enter Password">
-                    <input id="submit" type="submit" value="Login">
+                    <h2 color="white"></h2>If you have already signedUp please Login..</h2><br>
+                    <button class="loginbtn"><a href="login.html">Login</a></button>
                 </form>
             </div>
         </div>
