--- a/televisions.html
+++ b/televisions.html
@@ -58,6 +58,12 @@
                 <option value="Min">Below 20% (52)</option>
             </select>
         </div>
+        <div class="product-gallery" id="product-gallery"></div>
+
+        <div class="pagination">
+          <button id="prev" onclick="changePage(-1)" disabled>Previous</button>
+          <button id="next" onclick="changePage(1)">Next</button>
+        </div>
         <div id="card-div">
             <div class="card">
                 <div id="pruductImg">
@@ -76,7 +82,7 @@
                 <p>Standard Delivery by Tomorrow</p>
                 <div id="btns">
                     <button>Extra 2000 Bank Discount</button>
-                    <button>No Cost EMI</button>
+                    <button class="addbtn">Add Cart</button>
                 </div>
             </div>
             <div class="card">
@@ -96,7 +102,7 @@
                 <p>Standard Delivery by Tomorrow</p>
                 <div id="btns">
                     <button>Extra 2000 Bank Discount</button>
-                    <button>No Cost EMI</button>
+                    <button class="addbtn">Add Cart</button>
                 </div>
             </div>
             <div class="card">
@@ -116,7 +122,7 @@
                 <p>Standard Delivery by Tomorrow</p>
                 <div id="btns">
                     <button>Extra 2000 Bank Discount</button>
-                    <button>No Cost EMI</button>
+                    <button class="addbtn">Add Cart</button>
                 </div>
             </div>
             <div class="card">
@@ -136,7 +142,7 @@
                 </h3>
                 <p>Standard Delivery by Tomorrow</p>
                 <div id="btns">
-                    <button>No Cost EMI</button>
+                    <button class="addbtn">Add Cart</button>
                 </div>
             </div>
             <div class="card">
@@ -157,6 +163,8 @@
                 <p>Standard Delivery by Tomorrow</p>
                 <div id="btns">
                     <button>No Cost EMI</button>
+                    <button class="addbtn">Add Cart</button>
+
                 </div>
             </div>
             <div class="card">
@@ -177,7 +185,7 @@
                 <p>Standard Delivery by Tomorrow</p>
                 <div id="btns">
                     <button>Extra 2000 Bank Discount</button>
-                    <button>No Cost EMI</button>
+                    <button class="addbtn">Add Cart</button>
                 </div>
             </div>
             <div class="card">
@@ -194,7 +202,7 @@
                 <p>Standard Delivery by Tomorrow</p>
                 <div id="btns">
                     <button>Extra 2000 Bank Discount</button>
-                    <button>No Cost EMI</button>
+                    <button class="addbtn">Add Cart</button>
                 </div>
             </div>
             <div class="card">
@@ -214,7 +222,7 @@
                 <p>Standard Delivery by Tomorrow</p>
                 <div id="btns">
                     <button>Extra 2000 Bank Discount</button>
-                    <button>No Cost EMI</button>
+                    <button class="addbtn">Add Cart</button>
                 </div>
             </div>
             <div class="card">
@@ -235,7 +243,7 @@
                 <p>Standard Delivery by Tomorrow</p>
                 <div id="btns">
                     <button>Extra 2000 Bank Discount</button>
-                    <button>No Cost EMI</button>
+                    <button class="addbtn">Add Cart</button>
                 </div>
             </div>
             <div class="card">
@@ -256,7 +264,7 @@
                 <p>Standard Delivery by Tomorrow</p>
                 <div id="btns">
                     <button>Extra 2000 Bank Discount</button>
-                    <button>No Cost EMI</button>
+                    <button class="addbtn">Add Cart</button>
                 </div>
             </div>
             <div class="card">
@@ -275,7 +283,7 @@
                 <p>Standard Delivery by Tomorrow</p>
                 <div id="btns">
                     <button>Extra 2000 Bank Discount</button>
-                    <button>No Cost EMI</button>
+                    <button class="addbtn">Add Cart</button>
                 </div>
             </div>
             <div class="card">
@@ -293,7 +301,7 @@
                 <p>Standard Delivery by Tomorrow</p>
                 <div id="btns">
                     <button>Extra 2000 Bank Discount</button>
-                    <button>No Cost EMI</button>
+                    <button class="addbtn">Add Cart</button>
                 </div>
             </div>
             <div class="card">
@@ -311,7 +319,7 @@
                 <p>Standard Delivery by Tomorrow</p>
                 <div id="btns">
                     <button>Extra 2000 Bank Discount</button>
-                    <button>No Cost EMI</button>
+                    <button class="addbtn">Add Cart</button>
                 </div>
             </div>
             <div class="card">
@@ -329,7 +337,7 @@
                 <p>Standard Delivery by Tomorrow</p>
                 <div id="btns">
                     <button>Extra 2000 Bank Discount</button>
-                    <button>No Cost EMI</button>
+                    <button class="addbtn">Add Cart</button>
                 </div>
             </div>
             <div class="card">
@@ -350,7 +358,7 @@
                 <p>Standard Delivery by Tomorrow</p>
                 <div id="btns">
                     <button>Extra 2000 Bank Discount</button>
-                    <button>No Cost EMI</button>
+                    <button class="addbtn">Add Cart</button>
                 </div>
             </div>
         </div>
@@ -360,5 +368,6 @@
 </body>
 <script src="./scripts/navbar.js"></script>
 <script src="./scripts/footer.js"></script>
+<script src="./scripts/telivision.js"></script>
 
 </html>
